<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_bottom_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_home" />

    <item
        android:id="@+id/btn_bottom_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/bottom_map" />

    <item
        android:id="@+id/btn_bottom_register"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_register" />

    <item
        android:id="@+id/btn_bottom_list"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_list" />

    <item
        android:id="@+id/btn_bottom_setting"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_setting" />
</menu>
